--- a/styles/main.css
+++ b/styles/main.css
@@ -4380,7 +4380,7 @@ tbody.collapse.show {
 }
 
 .navbar-light .navbar-brand {
-  color: rgba(0, 0, 0, 0.9);
+  color: white;
 }
 
 .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
@@ -4388,7 +4388,7 @@ tbody.collapse.show {
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.5);
+  color: white;
 }
 
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
@@ -6188,6 +6188,10 @@ button.bg-danger:focus {
 
 .bg-light {
   background-color: #f8f9fa !important;
+}
+
+.bg-blue {
+  background-color: #5b949f !important;
 }
 
 a.bg-light:hover, a.bg-light:focus,
@@ -9244,14 +9248,14 @@ body {
 }
 
 .ww-rsvp-detail .ww-rsvp-form .btn-submit {
-  background-color: rgba(245, 138, 119, 0.8);
+  background-color: #5B949F;
   padding: 0.45rem 1.5rem;
   border: 0;
 }
 
 .ww-rsvp-detail:before {
   content: "";
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.8);
   width: 100%;
   height: 100%;
   position: absolute;
