Update ceremony section with close-to-reality data

--- a/styles/main.css
+++ b/styles/main.css
@@ -9198,7 +9198,7 @@ body {
 
 /* RSVP Style */
 .ww-rsvp-detail {
-  background: url("../images/rsvp-img.jpg") no-repeat center center;
+  background: url("../images/la_gravette_salle_reception.jpg") no-repeat center center;
   background-size: cover;
   min-height: 500px;
   position: relative;
