--- a/styles/main.css
+++ b/styles/main.css
@@ -64,7 +64,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.2;
   color: #212529;
   text-align: left;
   background-color: #fff;
@@ -209,7 +209,7 @@ figure {
 
 img {
   vertical-align: middle;
-  border-style: none;
+  border: none;
 }
 
 svg:not(:root) {
@@ -9077,13 +9077,20 @@ body {
 }
 
 .ww-home-page .ww-wedding-announcement .ww-announcement-date {
-  font-size: 3.5rem;
+  font-size: 4rem;
 }
 
 @media (max-width: 576px) {
   .ww-home-page .ww-wedding-announcement .ww-couple-name {
     font-size: 50px;
   }
+}
+
+#couple img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  max-width: 70%;
 }
 
 .ww-home-page:before {
@@ -9147,6 +9154,10 @@ body {
 .ww-wedding-event ul {
   list-style: none;
   padding-left: 0;
+}
+
+.ww-wedding-event img {
+  max-width: 60%;
 }
 
 /* Couple Friends Style  */
@@ -9294,7 +9305,7 @@ body {
 
 /* introduction section */
 .introduction-text {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
 }
 
 .tourism-icon {
@@ -9317,3 +9328,4 @@ body {
 .visit-place .distance {
   font-style: italic;
 }
+
