- Move css and js file to the same folder - Justify text for A&R section - Increase h1/h2/h3/h4/h5 font size - Remove padding between sections

--- a/css/main.css
+++ b/css/main.css
@@ -371,23 +371,23 @@ h1, h2, h3, h4, h5, h6,
 }
 
 h1, .h1 {
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 
 h2, .h2 {
-  font-size: 2rem;
+  font-size: 2.75rem;
 }
 
 h3, .h3 {
-  font-size: 1.75rem;
+  font-size: 2.25rem;
 }
 
 h4, .h4 {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 h5, .h5 {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
 }
 
 h6, .h6 {
@@ -9093,6 +9093,10 @@ body {
   max-width: 70%;
 }
 
+#couple p {
+  text-align: justify;
+}
+
 .ww-home-page:before {
   content: "";
   width: 100%;
@@ -9158,6 +9162,10 @@ body {
 
 .ww-wedding-event img {
   max-width: 60%;
+}
+
+.ww-wedding-event span, .ww-wedding-event p {
+  font-size: 1.3rem;
 }
 
 /* Couple Friends Style  */
@@ -9292,7 +9300,7 @@ body {
 }
 
 .ww-section {
-  padding: 100px 0;
+  padding: 50px 0;
 }
 
 .btn-primary {
