--- a/css/main.css
+++ b/css/main.css
@@ -9323,8 +9323,9 @@ body {
 }
 
 .tourism-icon {
-  text-align: center;
   padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid gray;
 }
 
 .tourism-icon img {
