Clean html structure in the tourism section

--- a/css/main.css
+++ b/css/main.css
@@ -9344,6 +9344,6 @@ body {
   font-style: italic;
 }
 
-.ww-tourism .row:not(:last-child) {
+.ww-tourism-item:not(:last-child) {
   padding-bottom: 3em;
 }
